# roarm-setup

.docker/: Dockerfile  build.sh  run.sh
docker/: Dockerfile  build.sh  run.sh
roarm/: CMakeLists.txt
roarm/config/: bridge.yaml  sim_controllers.yaml
roarm/launch/: roarm_sim.launch.py
roarm/rviz/: view_description.rviz
roarm/urdf/: roarm.urdf  roarm.xacro  robot.urdf.xacro  ros2_control.xacro
roarm_description/: CMakeLists.txt  package.xml
roarm_description/config/: sim_controllers.yaml  test_controllers.yaml
roarm_description/launch/: roarm.launch.py  roarm_sim.launch.py
roarm_description/urdf/: materials.xacro  roarm.xacro  ros2_control.xacro
roarm_teleop/: CMakeLists.txt  package.xml
roarm_teleop/src/: teleop.cpp
